--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <form method="POST">
-    <textarea name="question"></textarea><br>
+    <textarea name="question">{{ question }}</textarea><br>
     <button type="submit">送信</button><br>
     {{ response }}<br>
     <pre>
